minor fixes for dinamic view

--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -18,9 +18,9 @@
 </header>
 <nav>
     <ul>
-        <li class="active"><a href="">Todas</a></li>
-        <li class=""><a href="">Pilsen</a></li>
-        <li class=""><a href="">IPA</a></li>
-        <li class=""><a href="">Stout</a></li>
+        <li class="active"><a href="/">Todas</a></li>
+        <li class=""><a href="/pilsen">Pilsen</a></li>
+        <li class=""><a href="/ipa">IPA</a></li>
+        <li class=""><a href="/stout">Stout</a></li>
     </ul>
 </nav>
