--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,8 +97,9 @@ h2 {
 }
 .item--image {
     width: 100%;
-    height: auto;
+    height: 50%;
     border-radius: 5px;
+    object-fit: cover;
 }
 .item--name {
     font-size: 15px;
