--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -1,14 +1,18 @@
 {{>partials/header}}
 <section class="banner" style="background-image: url('images/{{banner.background}}')">Todas as cervejas</section>
 <h2>Lista de cervejas do tipo {{banner.title}}</h2>
-{{banner.background}}
 <img href= '{{& background}}'>
 <div class="container list">
-    <div class="item">
-        <img src="images/"{{background}} class="item--image" />
-        <div class="item--name">Heineken</div>
-        <div class="item--color">Cor: Amarela</div>
+
+    {{#list}}
+        <div class="item">
+        <img src="images/{{image}}" class="item--image" />
+        <div class="item--name">{{name}}</div>
+        <div class="item--type">Tipo: {{type}}</div>
+        <div class="item--color">Cor: {{color}}</div>
+        <div class="item--color">Lançada em {{releasedDate}}</div>
     </div>
+    {{/list}}
 </div>
 
 {{>partials/footer}}
