--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -1,5 +1,5 @@
 {{>partials/header}}
-<section class="banner" style="background-image: url('images/{{banner.background}}')">Todas as cervejas</section>
+<section class="banner" style="background-image: url('images/{{banner.background}}')">{{banner.title}}</section>
 <h2>Lista de cervejas do tipo {{banner.title}}</h2>
 <img href= '{{& background}}'>
 <div class="container list">
