--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --pagebg: #FFF;
-    --main: #102581;
+    --main: #ffa200;
     --bglink: rgba(0, 0, 0, 0.3);
     --darkbg: #FFF;
     --lightbg: #000;
@@ -97,7 +97,7 @@ h2 {
 }
 .item--image {
     width: 100%;
-    height: 50%;
+    height: 200px;
     border-radius: 5px;
     object-fit: cover;
 }
