--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@
     padding: 0;
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     background-color: var(--pagebg);
 }
 .container {
